--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <br>
     <div class="input-group mb-3">
         <input type="text" name="name" id="name" class="form-control" placeholder="placeholder" aria-describedby="suffixId">
-        <span class="input-group-text" id="suffixId">niovako</span>
+        <span class="input-group-text" id="suffixId">makeoff</span>
     </div>
 </body>
 </html>
